--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,7 @@ main {
     color: #777;
     overflow: hidden;
     display: flex;
+    flex: 1; /* Para manter o footer sempre no final da pagina memso se o conteúdo for pequeno e a tela comprida*/
     flex-direction: column;
     background-color: white;
 }
@@ -28,7 +29,7 @@ main {
 
 
 
-.sobre-proj {
+.sobre {
     flex-direction: column;
     padding: 2rem;
 }
@@ -139,7 +140,7 @@ main hr {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0));
 }
 
-main .sobre-proj hr{
+main .sobre hr{
     /* background-color: white; */
     background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(255, 255, 255));
 }
@@ -285,7 +286,7 @@ main p{
     main{
         background-image: linear-gradient(to right, #3ca488, #3ca488, white, white);
     }
-    .sobre-proj{
+    .sobre{
         max-width: 500px;
     }
     .content{
@@ -294,31 +295,24 @@ main p{
 }
 
 @media (min-width: 1100px) {
-    /* main {
-        display: grid;
-        grid-template-columns: 35% 65%;
-        grid-template-rows: 1fr;
-    } */
     main{
-        /* display: flex; */
-        /* flex-direction: row; */
-        /* justify-content: center; */
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
     }
 
-    .sobre-proj{
+    .sobre{
         width: 35%;
     }
     .content{
         width: 65%;
     }
-
-
     .apenas-desktop {
         visibility: visible;
         position: inherit;
     }
 
-    .sobre-proj {
+    .sobre {
         /* background-image: linear-gradient(to bottom, white, #2c7b66, white); */
         background-color: #3ca488;
         /* background-image: linear-gradient(to right, #2c7b66, #2c7b66, black); */
@@ -330,12 +324,12 @@ main p{
         z-index: 2;
     }
     
-    .sobre-proj p{
+    .sobre p{
         color: white;
         text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
     }
 
-    .sobre-proj h1 {
+    .sobre h1 {
         font-size: 2.8rem;
         padding: 1rem 0;
         color: #00282685;
