--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -201,10 +201,17 @@ main h6 {
 }
 
 main p{
+    
     font-size: 1rem;
     padding: 0.4rem 0;
     line-height: 1.4rem;
     font-weight: 100;
+}
+
+main a{
+    text-decoration: none;
+    color: inherit;
+    /* font-weight: 600; */
 }
 
 .corrigir{
