Finalizado FuncUmaVar(só falta add o link ao TVM)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,6 +47,7 @@ main {
 
 .recurso-container{
     display: flex;
+    flex-direction: column;
     margin: 1rem 0 2rem 0;
     /* background-color: blue; */
 }
@@ -80,7 +81,8 @@ main {
     /* width: 100%; */
     /* clear: both; */
     /* flex: 1; */
-    /* display: flex; */
+    display: flex;
+    align-items: column;
     /* width: 100%; */
     /* min-width: 10rem; */
     /* float: right; */
