Adicionado os recursos digitais e projeto de ensino coloquei sobre o desenvolvimento com python

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,6 +75,7 @@ main {
     /* max-height: 10rem; */
     /* overflow: auto; */
     margin-bottom: 1rem;
+    text-align: justify;
     /* background-color: red; */
     
     /* width: 54rem; */
