--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -10,8 +10,6 @@
 }
 
 
-
-
 header{
     font-family: "Reem";
     word-spacing: 4px;
@@ -19,12 +17,11 @@ header{
 }
 
 
-
 /* 1. BARRA SUPERIOR */
 header .barra-sup{
     display: flex;
     background-color: #222;
-    background-image: linear-gradient(to left, #000, #222, #000);
+    background-image: linear-gradient(to left, #000, #111, #000);
     align-items: center;
     justify-content: space-around;
     padding: 0 1rem;
@@ -54,7 +51,7 @@ header .titulo-barra-longo{
 }
 header .titulo-barra-curto{
     display: none;
-}
+}   
 header h2{
     font-size: 1rem;
     margin-top: 0.3rem;
@@ -207,10 +204,28 @@ header .titulo-dir{
 @media (max-width: 768px){
 
     header .barra-sup{
-        height: 6rem;
-    }
+        height: 7rem;
+        background-image: url("../img/banner-peq.png");
+        
+        /* background-color: black; */
+        }
+    /* header.barra-sup img{ */
+        /* position: absolute; */
+        /* z-index: -3; */
+    /* } */
     header .titulo-barra{
         display: inline;
+    }
+    header img{
+        /* border: solid 1px black; */
+        /* box-shadow: solid 1px black; */
+        /* background: radial-gradient(circle, black, transparent); */
+        /* border-radius: ; */
+        /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); */
+        filter: drop-shadow(5px 5px 2px rgba(0, 0, 0, 1));
+        /* filter: contrast(10%); */
+        /* filter: contrast(200%) */
+        /* box-shadow: 1px 5px 10px rgba(0, 0, 0, 1); */
     }
     header .div-btns-barra{
         right: 0;
