--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -91,7 +91,7 @@ header .menu-btn{
     background-color: #222;
     top: 3.1rem;
     font-weight: 100;
-    padding: 0rem;
+    padding: 0 0rem;
     display: flex;
     flex-direction: column;
     width: 5.4rem;
@@ -102,11 +102,91 @@ header .menu-btn{
     position: absolute;
 }
 /* 1.2.2.1 Opções do menu dos botões */
+
+
+
+
+.menu-btn a {
+    text-decoration: none;
+    padding: 0.7rem 0.4rem;
+    text-align: center;
+    opacity: 0.85;
+    transition: opacity 0.3s ease;
+}
+
+.menu-btn a:hover {
+    opacity: 1;
+}
+
+.menu-btn a:hover{
+    background-image: linear-gradient(to right, #111, transparent, #111);
+}
+
+
+
+
+
+
+
+
+/* 
 header .menu-btn a{
     text-decoration: none;
-    padding: 0.7rem 0rem;
-    text-align: center;    
+    padding: 0.7rem 0.4rem;
+    text-align: center;
+    opacity: 0.5;    
+} */
+
+
+
+
+/* header .menu-btn a:hover{ */
+
+/* } */
+
+
+/* header .menu-btn a:hover { */
+    /* background-image: linear-gradient(to right, #111, transparent, #111); */
+    
+/* } */
+
+
+/* @keyframes fadeInOut { */
+    /* from { */
+        /* background-image: none; */
+    /* } */
+    /* to { */
+        /* background-image: linear-gradient(to right, #111, transparent, #111); */
+        /* width: 1rem; */
+    /* } */
+/* } */
+
+
+/* header .menu-btn a :hover { */
+    /* animation: fadeInOut 0.5s ease; */
+    /* animation: fadeInOut 0.5s ease; */
+/* } */
+
+/* .menu-btn a:hover{
+    animation: fadeIn 1s ease;
 }
+
+@keyframes fadeIn {
+    from {
+        /* transform: ; */
+        /* background-image: linear-gradient(to right, #11111100, transparent, #11111100); 
+        opacity: 0;    
+    }
+
+    to {
+        /* transform: rotate(360deg); */
+        /* background-image: linear-gradient(to right, #111111ff, transparent, #111111ff); 
+        opacity: 1;
+    }
+} */
+
+
+
 
 
 /* 1.3. ICONE HAMBURGUER */
