--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -13,27 +13,27 @@ footer a{
     color: white;
 }
 
-.footer-content{
+footer .footer-content{
     display: flex;
     width: calc(100% - 4rem);
     justify-content: space-around;
     padding: 2rem;
 }
 
-.sec-ft{
+footer .sec-ft{
     text-align: center;
     overflow: hidden;
     /* padding: 0 2rem; */
     /* border: solid 1px red; */
 }
 
-.sec-ft p{
+footer .sec-ft p{
     padding-bottom: 0.5rem;
     padding-left: 2rem;
     text-align: left;
 }
 
-.copyright{
+footer .copyright{
     padding-bottom: 0.75rem;
     font-size: 0.7rem;
     /* display: flex; */
@@ -42,7 +42,7 @@ footer a{
     /* background-color: red; */
 }
 
-#sec-1 img{
+footer #sec-1 img{
     width: 3rem;
     background-color: white;
     border-radius: 50%;
@@ -50,12 +50,12 @@ footer a{
     box-shadow: 5px 5px 5px black;  
 }
 
-#sec-1{
+footer #sec-1{
     display: flex;
     height: 100%;
     justify-content: center;
 }
-#sec-1 a{
+footer #sec-1 a{
     /* background-color: red; */
     border-radius: 50%;
     /* display: flex; */
@@ -66,9 +66,8 @@ footer a{
     /* flex-direction: column; */
 
 }
-#sec-3 iframe{
-}
-#sec-3{
+
+footer #sec-3{
     border: solid 0.2rem white;
     border-radius: 10px;
     box-shadow: 5px 5px 5px black;
@@ -78,33 +77,39 @@ footer a{
 }
 
 @media (min-width: 1600px) {
-    .footer-content {
+    footer .footer-content {
         width: 1500px;
     }
 }
 
 @media (max-width: 768px) {
-    .footer-content {
+    footer .footer-content {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    .sec-ft p{
+    footer .sec-ft p{
         text-align: center;
         padding-left: 0;
     }
-    .sec-ft{
+    footer .sec-ft{
         margin: 1rem 0;
         width: 100%;
     }
-    #sec-1{
+    footer #sec-1{
         order: 1;
     }
-    #sec-2{
+    footer #sec-2{
         order: 2;
     }
-    #sec-3{
+    footer #sec-3{
         order: 3;
+    }
+}
+
+@media (max-width: 400px) {
+    footer #sec-3 iframe {
+        width: 80vw;
     }
 }
