--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,9 +18,14 @@ body {
 .comentario {
     color: red;
     background-color: yellow;
+    width: fit-content;
     font-size: 1rem;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
+    border-radius: 10px;
+    padding: 1rem;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.65);
+    /* position: absolute; */
 }
 
 
